// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WML normalize should accumulate multiple appearances of the same key 1`] = `
Object {
  "If-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 2,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
      },
    ],
    "dependencies": Array [],
    "if": "true",
    "key": "If-0",
    "tag": "If",
  },
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "If-0",
            "tag": "If",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": Array [
          Object {
            "tag": "String",
            "value": "Vortex",
          },
        ],
        "render": Array [],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
        "name": Array [],
        "render": Array [
          Object {
            "tag": "String",
            "value": "Hello, world!",
          },
          Object {
            "tag": "Space",
          },
        ],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "If-0",
            "tag": "If",
          },
        ],
        "location": Array [
          0,
          2,
          0,
        ],
        "name": Array [],
        "render": Array [
          Object {
            "tag": "String",
            "value": "Vortex!",
          },
        ],
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should correctly handle conditionals in message text 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "strong",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "trendy",
            "tag": "Variable",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": Array [
          Object {
            "tag": "String",
            "value": "Vortex",
          },
        ],
        "render": Array [
          Object {
            "tag": "String",
            "value": "Hello, world!",
          },
          Object {
            "contents": Array [
              Object {
                "tag": "String",
                "value": "Vortex!",
              },
            ],
            "dependencies": Array [
              "strong",
            ],
            "if": "strong",
            "tag": "Condition",
          },
          Object {
            "contents": Array [
              Object {
                "contents": Array [
                  Object {
                    "tag": "String",
                    "value": "V.O.R.T.E.X.",
                  },
                ],
                "dependencies": Array [
                  "trendy",
                ],
                "if": "trendy",
                "tag": "Condition",
              },
            ],
            "dependencies": Array [
              "strong",
            ],
            "if": "!strong",
            "tag": "Condition",
          },
        ],
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
  "trendy": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
      },
    ],
    "default": "false",
    "key": "trendy",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should correctly handle multiple and nested conditionals 1`] = `
Object {
  "If-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
      },
    ],
    "dependencies": Array [
      "strong",
    ],
    "if": "strong",
    "key": "If-0",
    "tag": "If",
  },
  "If-1": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "If-2",
            "tag": "If",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
      },
    ],
    "dependencies": Array [
      "strong",
    ],
    "if": "!strong",
    "key": "If-1",
    "tag": "If",
  },
  "If-2": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 2,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "If-1",
            "tag": "If",
          },
        ],
        "location": Array [
          0,
          2,
          0,
        ],
      },
    ],
    "dependencies": Array [
      "trendy",
    ],
    "if": "trendy",
    "key": "If-2",
    "tag": "If",
  },
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "If-0",
            "tag": "If",
          },
          Object {
            "index": 0,
            "key": "If-1",
            "tag": "If",
          },
          Object {
            "index": 0,
            "key": "strong",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "trendy",
            "tag": "Variable",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": Array [
          Object {
            "tag": "String",
            "value": "Vortex",
          },
        ],
        "render": Array [
          Object {
            "tag": "String",
            "value": "Hello, world!",
          },
        ],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "If-0",
            "tag": "If",
          },
        ],
        "location": Array [
          0,
          1,
          0,
        ],
        "name": Array [],
        "render": Array [
          Object {
            "tag": "String",
            "value": "Vortex!",
          },
        ],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "If-1",
            "tag": "If",
          },
          Object {
            "index": 0,
            "key": "If-2",
            "tag": "If",
          },
        ],
        "location": Array [
          0,
          2,
          0,
          0,
        ],
        "name": Array [],
        "render": Array [
          Object {
            "tag": "String",
            "value": "V.O.R.T.E.X.",
          },
        ],
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          3,
        ],
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
  "trendy": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          4,
        ],
      },
    ],
    "default": "false",
    "key": "trendy",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should correctly serialize multiple unconditioned descriptions 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "test",
            "tag": "Room",
          },
          Object {
            "index": 1,
            "key": "test",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "test": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": Array [],
        "render": Array [
          Object {
            "tag": "String",
            "value": "One",
          },
        ],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
        "name": Array [],
        "render": Array [
          Object {
            "tag": "String",
            "value": "Two",
          },
        ],
      },
    ],
    "global": false,
    "key": "test",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should create wrapping elements for exits where needed 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": Array [],
        "render": Array [],
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "b456#a123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [],
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "b456#a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "from": "b456",
    "key": "b456#a123",
    "name": "",
    "tag": "Exit",
    "to": "a123",
  },
}
`;

exports[`WML normalize should denormalize condition dependencies into contextStack 1`] = `
Object {
  "If-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
      },
    ],
    "dependencies": Array [
      "strong",
    ],
    "if": "strong",
    "key": "If-0",
    "tag": "If",
  },
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "If-0",
            "tag": "If",
          },
          Object {
            "index": 0,
            "key": "strong",
            "tag": "Variable",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": Array [
          Object {
            "tag": "String",
            "value": "Vortex",
          },
        ],
        "render": Array [
          Object {
            "tag": "String",
            "value": "Hello, world!",
          },
        ],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "If-0",
            "tag": "If",
          },
        ],
        "location": Array [
          0,
          1,
          0,
        ],
        "name": Array [],
        "render": Array [
          Object {
            "tag": "String",
            "value": "Vortex!",
          },
        ],
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should normalize a character 1`] = `
Object {
  "Tess": Object {
    "FirstImpression": undefined,
    "Name": "Tess",
    "OneCoolThing": "Fuchsia eyes",
    "Outfit": "A battered frock-coat",
    "Pronouns": Object {
      "adjective": "hers",
      "object": "her",
      "possessive": "her",
      "reflexive": "herself",
      "subject": "she",
    },
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "test",
    "fileURL": undefined,
    "key": "Tess",
    "tag": "Character",
  },
}
`;

exports[`WML normalize should normalize every needed tag 1`] = `
Object {
  "ImageTest": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "location": Array [
          0,
          2,
          0,
        ],
      },
    ],
    "fileURL": "https://test.com/imageTest.png",
    "key": "ImageTest",
    "tag": "Image",
  },
  "Import-0": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "power",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "overview",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
      },
    ],
    "from": "BASE",
    "key": "Import-0",
    "mapping": Object {
      "overview": Object {
        "key": "overview",
        "type": "Room",
      },
      "power": Object {
        "key": "basePower",
        "type": "Variable",
      },
    },
    "tag": "Import",
  },
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
          Object {
            "index": 1,
            "key": "clockTower",
            "tag": "Feature",
          },
          Object {
            "index": 0,
            "key": "active",
            "tag": "Variable",
          },
          Object {
            "index": 0,
            "key": "inactive",
            "tag": "Computed",
          },
          Object {
            "index": 0,
            "key": "toggleActive",
            "tag": "Action",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "TestMap": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "ImageTest",
            "tag": "Image",
          },
          Object {
            "index": 1,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "images": Array [
          "ImageTest",
        ],
        "location": Array [
          0,
          2,
        ],
        "rooms": Object {
          "a123": Object {
            "location": Array [
              0,
              2,
              1,
            ],
            "x": 200,
            "y": 150,
          },
        },
      },
    ],
    "key": "TestMap",
    "tag": "Map",
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "clockTower",
            "tag": "Feature",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          1,
        ],
        "name": Array [],
        "render": Array [],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "location": Array [
          0,
          2,
          1,
        ],
        "name": Array [],
        "render": Array [],
        "x": 200,
        "y": 150,
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "active": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          4,
        ],
      },
    ],
    "default": "true",
    "key": "active",
    "tag": "Variable",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "b456#a123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [],
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "b456#a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          1,
          0,
        ],
      },
    ],
    "from": "b456",
    "key": "b456#a123",
    "name": "",
    "tag": "Exit",
    "to": "a123",
  },
  "clockTower": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          1,
          1,
        ],
        "name": Array [],
        "render": Array [],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          3,
        ],
        "name": Array [
          Object {
            "tag": "String",
            "value": "Clock Tower",
          },
        ],
        "render": Array [],
      },
    ],
    "global": false,
    "key": "clockTower",
    "tag": "Feature",
  },
  "inactive": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          5,
        ],
      },
    ],
    "dependencies": Array [
      "active",
    ],
    "key": "inactive",
    "src": "!active",
    "tag": "Computed",
  },
  "overview": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "location": Array [
          0,
          0,
          1,
        ],
        "name": Array [],
        "render": Array [],
      },
    ],
    "global": false,
    "key": "overview",
    "tag": "Room",
  },
  "power": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "default": undefined,
    "key": "power",
    "tag": "Variable",
  },
  "toggleActive": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          6,
        ],
      },
    ],
    "key": "toggleActive",
    "src": "active = !active",
    "tag": "Action",
  },
}
`;

exports[`WML normalize should normalize exits into their parent room where needed 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
          Object {
            "index": 1,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "contextStack": Array [],
        "location": Array [
          0,
        ],
      },
    ],
    "fileName": "Test",
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "a123#b456",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          0,
        ],
        "name": Array [
          Object {
            "tag": "String",
            "value": "Vortex",
          },
        ],
        "render": Array [],
      },
    ],
    "global": false,
    "key": "a123",
    "tag": "Room",
  },
  "a123#b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          0,
          0,
        ],
      },
    ],
    "from": "a123",
    "key": "a123#b456",
    "name": "",
    "tag": "Exit",
    "to": "b456",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "contents": Array [
          Object {
            "index": 0,
            "key": "b456#a123",
            "tag": "Exit",
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [],
      },
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "location": Array [
          0,
          2,
        ],
        "name": Array [
          Object {
            "tag": "String",
            "value": "Welcome",
          },
        ],
        "render": Array [],
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "b456#a123": Object {
    "appearances": Array [
      Object {
        "contents": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "b456",
            "tag": "Room",
          },
        ],
        "location": Array [
          0,
          1,
        ],
      },
    ],
    "from": "b456",
    "key": "b456#a123",
    "name": "",
    "tag": "Exit",
    "to": "a123",
  },
}
`;
